# IndicGlyphAI

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  s3.py
backend/app/routers/: __init__.py  health.py  settings.py
backend/migrations/: README.md  env.py  script.py.mako
backend/migrations/versions/: 0001_initial.py
backend/tests/: test_health.py
docs/: platform_specification_v_1.md
frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.base.json  tsconfig.json  vite.config.ts
frontend/docker/nginx/: default.conf
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: HomePage.tsx
infra/certs/: README.md
infra/nginx/: default.conf
qa/: cluster1_qa_log.md
