[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indicglyph-backend"
version = "0.1.0"
description = "IndicGlyph AI & OCR FastAPI backend service powered by Taapset Technologies"
authors = [{ name = "Taapset Technologies" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "aioboto3>=12.0.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "httpx>=0.26.0",
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
